// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component should render default as expected 1`] = `
<p
  className="sc-bdVaJa fZoiVO"
>
  Blurred vision and the hobble of thick prose
</p>
`;

exports[`Text component should render strong as expected 1`] = `
<p
  className="sc-bdVaJa fZoiVO"
>
  Why have pride in a lyric when all the other songs go
</p>
`;

exports[`Text component should render with custom colour as expected 1`] = `
<p
  className="sc-bdVaJa fZoiVO"
>
  Why empower misogyny while violence towards women grows?
</p>
`;
